@@ -19,6 +19,7 @@
 - Fixed a problem with attack mode -a 7 together with stdout mode where the mask bytes were missing in the output
 - Fixed a problem with tab completion where --self-test-disable did incorrecly expect a further parameter/value
 - Fixed the ciphertext max length in Ansible Vault parser
+- Fixed speed/delay problem when quitting while the outfile folder is being scanned
 - Removed duplicate words in the dictionary file example.dict
 
 * changes v4.2.0 -> v4.2.1
